--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "fewagency/fluent-html": "~1.4"
+    "fewagency/fluent-html": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
