--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "fewagency/fluent-form",
-  "description": "A fluent interface style HTML Form generator for PHP",
+  "description": "Fluent interface style HTML Form generator",
   "keywords": [
     "form",
     "fluent",
@@ -17,7 +17,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "fewagency/fluent-html": "dev-master"
+    "fewagency/fluent-html": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
